--- a/EGHV/Localization/es_ES/Ingame_Text.xml
+++ b/EGHV/Localization/es_ES/Ingame_Text.xml
@@ -1,116 +1,228 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
+<!--==========================================================================
 	EGHV : Enhanced Goodies and Hostile Villagers for Civilization VI
 	Copyright (C) 2020-2021 zzragnar0kzz
 	All rights reserved
--->
+===========================================================================-->
 <!-- localized in-game text for es_ES -->
 <GameData>
 	<LocalizedText>
+        <!--  -->
+        <!-- <Replace Tag="LOC_TECH_VILLAGER_BASIC_NAME" Language="es_ES">
+            <Text>Tribal Knowledge</Text>
+        </Replace>
+        <Replace Tag="LOC_TECH_VILLAGER_BASIC_DESC" Language="es_ES">
+            <Text>Basic tribal village technology.</Text>
+        </Replace>
+        <Replace Tag="LOC_TECH_VILLAGER_ADVANCED_NAME" Language="es_ES">
+            <Text>Tribal Lore</Text>
+        </Replace>
+        <Replace Tag="LOC_TECH_VILLAGER_ADVANCED_DESC" Language="es_ES">
+            <Text>Advanced tribal village technology.</Text>
+        </Replace> -->
+        <!-- new unit abilities -->
+        <Replace Tag="LOC_ABILITY_IMPROVED_HEALING_NAME" Language="es_ES">
+			<Text>Curación mejorada</Text>
+		</Replace>
+		<Replace Tag="LOC_ABILITY_IMPROVED_HEALING_DESC" Language="es_ES">
+			<Text>Curación mejorada: +20 Tasa de curación</Text>
+		</Replace>
+        <Replace Tag="LOC_ABILITY_IMPROVED_MOVEMENT_NAME" Language="es_ES">
+			<Text>Movimiento mejorado</Text>
+		</Replace>
+		<Replace Tag="LOC_ABILITY_IMPROVED_MOVEMENT_DESC" Language="es_ES">
+			<Text>Movimiento mejorado: +1 [ICON_Movement] movimiento</Text>
+		</Replace>
+        <Replace Tag="LOC_ABILITY_IMPROVED_SIGHT_NAME" Language="es_ES">
+			<Text>Vista mejorada</Text>
+		</Replace>
+		<Replace Tag="LOC_ABILITY_IMPROVED_SIGHT_DESC" Language="es_ES">
+			<Text>Vista mejorada: +1 vista</Text>
+		</Replace>
+        <Replace Tag="LOC_ABILITY_IMPROVED_STRENGTH_NAME" Language="es_ES">
+			<Text>Fuerza mejorada</Text>
+		</Replace>
+		<Replace Tag="LOC_ABILITY_IMPROVED_STRENGTH_DESC" Language="es_ES">
+			<Text>Fuerza mejorada: +10 [ICON_Strength] Fuerza de combate</Text>
+		</Replace>
+        <!-- villager totem building -->
+        <Replace Tag="LOC_BUILDING_TRIBAL_TOTEM_NAME" Language="es_ES">
+			<Text>Tótem de aldea tribal</Text>
+		</Replace>
+        <Replace Tag="LOC_BUILDING_TRIBAL_TOTEM_DESC" Language="es_ES">
+			<Text>Otorga +1 a la Lealtad por turno en esta ciudad. Si la ciudad ya tiene la máxima lealtad, también proporciona un +1 [ICON_A amenities] Amenity adicional.</Text>
+		</Replace>
+        <!-- in-game bonus reward notifications -->
+        <Replace Tag="LOC_BONUS_REWARD_NOTIFICATION_TITLE" Language="es_ES">
+            <Text>Recompensa de bonificación de aldea tribal</Text>
+        </Replace>
+        <Replace Tag="LOC_BONUS_REWARD_NOTIFICATION_MESSAGE" Language="es_ES">
+            <Text>Los aldeanos te proporcionan una recompensa adicional de</Text>
+        </Replace>
+        <!-- in-game villager secrets notifications -->
+        <Replace Tag="LOC_VILLAGER_SECRETS_NOTIFICATION_TITLE" Language="es_ES">
+            <Text>Secretos de los aldeanos desbloqueados</Text>
+        </Replace>
+        <Replace Tag="LOC_VILLAGER_SECRETS_NOTIFICATION_MESSAGE" Language="es_ES">
+            <Text>Los aldeanos te enseñan conocimientos arquitectónicos olvidados.</Text>
+        </Replace>
         <!-- in-game hostile villager notifications -->
         <Replace Tag="LOC_HOSTILE_VILLAGERS_NOTIFICATION_TITLE" Language="es_ES">
-            <Text>Aldeanos Hostiles</Text>
+            <Text>Aldeanos hostiles</Text>
         </Replace>
-        <Replace Tag="LOC_HOSTILE_VILLAGERS_UNIT_NOTIFICATION_MESSAGE" Language="es_ES">
-            <Text>¡Algunos de los aldeanos están enojados porque su tribu trató con forasteros, y se han organizado en una unidad cuerpo a cuerpo hostil en represalia!</Text>
+        <Replace Tag="LOC_HOSTILE_VILLAGERS_UNIT_NOTIFICATION_MESSAGE_1" Language="es_ES">
+            <Text>Los aldeanos enojados se han organizado en una [ICON_Unit] hostil</Text>
+        </Replace>
+        <Replace Tag="LOC_HOSTILE_VILLAGERS_UNIT_NOTIFICATION_MESSAGE_2" Language="es_ES">
+            <Text>en un lugar cercano!</Text>
         </Replace>
         <Replace Tag="LOC_HOSTILE_VILLAGERS_CAMP_NOTIFICATION_MESSAGE" Language="es_ES">
-            <Text>¡Los aldeanos son extremadamente hostiles a la presencia de forasteros y han creado un nuevo campamento desde el que lanzar más ataques!</Text>
+            <Text>¡Aldeanos extremadamente hostiles han creado un nuevo puesto avanzado bárbaro [ICONO Bárbaro] en un lugar cercano!</Text>
         </Replace>
         <!-- new goody hut reward descriptions : hostiles-type -->
-        <Replace Tag="LOC_GOODYHUT_SPAWN_HOSTILE_VILLAGERS_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_RED]¡Aparecen aldeanos hostiles![ENDCOLOR]</Text>
+        <Replace Tag="LOC_GOODYHUT_HOSTILE_VILLAGERS_DESCRIPTION" Language="es_ES">
+            <Text>[COLOR_RED] ¡Aparecen aldeanos hostiles! [ENDCOLOR]</Text>
+        </Replace>
+        <!-- new goody hut reward descriptions : secrets-type -->
+        <Replace Tag="LOC_GOODYHUT_VILLAGER_SECRETS_DESCRIPTION" Language="es_ES">
+            <Text>Conocimiento oculto revelado</Text>
         </Replace>
         <!-- replacement goody hut reward description : culture-type : free relic (now faith-type) -->
         <Replace Tag="LOC_GOODYHUT_CULTURE_RELIC_DESCRIPTION" Language="es_ES">
-			<Text>Se otorgó una [ICON_GreatWork_Relic] reliquia</Text>
+			<Text>Se otorgó una reliquia [ICON_GreatWork_Relic]</Text>
+		</Replace>
+        <!-- new goody hut reward descriptions : envoys-type -->
+		<Replace Tag="LOC_GOODYHUT_ENVOYS_GRANT_ONE_DESCRIPTION" Language="es_ES">
+			<Text>Un enviado de [ICON_Envoy]</Text>
+		</Replace>
+        <Replace Tag="LOC_GOODYHUT_ENVOYS_GRANT_TWO_DESCRIPTION" Language="es_ES">
+			<Text>Dos enviados de [ICON_Envoy]</Text>
+		</Replace>
+        <Replace Tag="LOC_GOODYHUT_ENVOYS_GRANT_THREE_DESCRIPTION" Language="es_ES">
+			<Text>Tres enviados de [ICON_Envoy]</Text>
+		</Replace>
+        <Replace Tag="LOC_GOODYHUT_ENVOYS_GRANT_FOUR_DESCRIPTION" Language="es_ES">
+			<Text>Cuatro enviados de [ICON_Envoy]</Text>
 		</Replace>
         <!-- new goody hut reward descriptions : culture-type -->
         <Replace Tag="LOC_GOODYHUT_CULTURE_ONE_CIVIC_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_CULTURE]Un Cívico gratis[ENDCOLOR]</Text>
+            <Text>[COLOR_FLOAT_CULTURE] Un Civic gratis [ENDCOLOR]</Text>
         </Replace>
         <Replace Tag="LOC_GOODYHUT_CULTURE_TWO_CIVICS_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_CULTURE]Dos Cívicos gratis[ENDCOLOR]</Text>
+            <Text>[COLOR_FLOAT_CULTURE] Dos educación cívica gratis [ENDCOLOR]</Text>
         </Replace>
-        <Replace Tag="LOC_GOODYHUT_CULTURE_SMALL_CHANGE_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_CULTURE]+{1_Num} [ICON_CultureLarge] Cultura en todas las ciudades[ENDCOLOR]</Text>
+        <Replace Tag="LOC_GOODYHUT_CULTURE_TWO_CIVIC_BOOSTS_DESCRIPTION" Language="es_ES">
+            <Text>[COLOR_FLOAT_CULTURE] Dos mejoras cívicas [ICON_CivicBoosted] gratuitas [ENDCOLOR]</Text>
         </Replace>
-        <Replace Tag="LOC_GOODYHUT_CULTURE_SMALL_MODIFIER_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_CULTURE]+{1_Num}% [ICON_CultureLarge] Cultura en todas las ciudades[ENDCOLOR]</Text>
+        <Replace Tag="LOC_GOODYHUT_CULTURE_ONE_CIVIC_BOOST_DESCRIPTION" Language="es_ES">
+            <Text>[COLOR_FLOAT_CULTURE] Un impulso cívico [ICON_CivicBoosted] gratuito [ENDCOLOR]</Text>
         </Replace>
         <!-- new goody hut reward descriptions : faith-type -->
-        <Replace Tag="LOC_GOODYHUT_FAITH_SMALL_CHANGE_DESCRIPTION" Language="es_ES">
-            <Text>+{1_Num} [ICON_FaithLarge] Fe en todas las ciudades</Text>
-        </Replace>
-        <Replace Tag="LOC_GOODYHUT_FAITH_SMALL_MODIFIER_DESCRIPTION" Language="es_ES">
-            <Text>+{1_Num}% [ICON_FaithLarge] Fe en todas las ciudades</Text>
-        </Replace>
+        <Replace Tag="LOC_GOODYHUT_LARGE_FAITH_DESCRIPTION" Language="es_ES">
+			<Text>+100 [ICON_Faith]</Text>
+		</Replace>
+		<Replace Tag="LOC_GOODYHUT_MEDIUM_FAITH_DESCRIPTION" Language="es_ES">
+			<Text>+60 [ICON_Faith]</Text>
+		</Replace>
+		<Replace Tag="LOC_GOODYHUT_SMALL_FAITH_DESCRIPTION" Language="es_ES">
+			<Text>+20 [ICON_Faith]</Text>
+		</Replace>
         <!-- new goody hut reward descriptions : gold-type -->
         <Replace Tag="LOC_GOODYHUT_ADD_TRADE_ROUTE_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_GOLD]+{1_Num} [ICON_TradeRouteLarge] ruta comercial(es)[ENDCOLOR]</Text>
+            <Text>[COLOR_FLOAT_GOLD] Una [ICON_TradeRouteLarge] ruta comercial adicional [ENDCOLOR]</Text>
         </Replace>
-        <Replace Tag="LOC_GOODYHUT_GOLD_SMALL_CHANGE_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_GOLD]+{1_Num} [ICON_GoldLarge] Oro en todas las ciudades[ENDCOLOR]</Text>
-        </Replace>
-        <Replace Tag="LOC_GOODYHUT_GOLD_SMALL_MODIFIER_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_GOLD]+{1_Num}% [ICON_GoldLarge] Oro en todas las ciudades[ENDCOLOR]</Text>
-        </Replace>
+        <Replace Tag="LOC_GOODYHUT_LARGE_GOLD_DESCRIPTION" Language="es_ES">
+			<Text>[COLOR_FLOAT_GOLD] +120 [ICON_Gold] [ENDCOLOR]</Text>
+		</Replace>
+		<Replace Tag="LOC_GOODYHUT_MEDIUM_GOLD_DESCRIPTION" Language="es_ES">
+			<Text>[COLOR_FLOAT_GOLD] +80 [ICON_Gold] [ENDCOLOR]</Text>
+		</Replace>
+		<Replace Tag="LOC_GOODYHUT_SMALL_GOLD_DESCRIPTION" Language="es_ES">
+			<Text>[COLOR_FLOAT_GOLD] +40 [ICON_Gold] [ENDCOLOR]</Text>
+		</Replace>
         <!-- replacement goody hut reward description : military-type : grant recon unit -->
         <Replace Tag="LOC_GOODYHUT_MILITARY_GRANT_UNIT_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_MILITARY]Los aldeanos te proporcionan un Explorador[ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_MILITARY] Una unidad de reconocimiento [ENDCOLOR]</Text>
 		</Replace>
         <!-- new goody hut reward descriptions : military-type -->
         <Replace Tag="LOC_GOODYHUT_MILITARY_GRANT_MELEE_UNIT_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_MILITARY]Los aldeanos te proporcionan un Guerrero[ENDCOLOR]</Text>
+            <Text>[COLOR_FLOAT_MILITARY] Una unidad cuerpo a cuerpo [ENDCOLOR]</Text>
         </Replace>
         <Replace Tag="LOC_GOODYHUT_MILITARY_GRANT_RANGED_UNIT_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_MILITARY]Los aldeanos te proporcionan un Honda[ENDCOLOR]</Text>
+            <Text>[COLOR_FLOAT_MILITARY] Una unidad a distancia [ENDCOLOR]</Text>
         </Replace>
+        <!-- new goody hut reward descriptions : (anti) cavalry military-type -->
         <Replace Tag="LOC_GOODYHUT_MILITARY_GRANT_ANTI_CAVALRY_UNIT_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_MILITARY]Los aldeanos te proporcionan un Lancero[ENDCOLOR]</Text>
+            <Text>[COLOR_FLOAT_MILITARY] Una unidad anti-caballería [ENDCOLOR]</Text>
         </Replace>
         <Replace Tag="LOC_GOODYHUT_MILITARY_GRANT_LIGHT_CAVALRY_UNIT_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_MILITARY]Los aldeanos te proporcionan un Jinete[ENDCOLOR]</Text>
+            <Text>[COLOR_FLOAT_MILITARY] Una unidad de caballería ligera [ENDCOLOR]</Text>
         </Replace>
         <Replace Tag="LOC_GOODYHUT_MILITARY_GRANT_HEAVY_CAVALRY_UNIT_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_MILITARY]Los aldeanos te proporcionan un Carro Pesado[ENDCOLOR]</Text>
+            <Text>[COLOR_FLOAT_MILITARY] Una unidad de caballería pesada [ENDCOLOR]</Text>
         </Replace>
+        <!-- new goody hut reward descriptions : support military-type -->
         <Replace Tag="LOC_GOODYHUT_MILITARY_GRANT_MILITARY_ENGINEER_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_MILITARY]Los aldeanos te proporcionan un Ingeniero Militar[ENDCOLOR]</Text>
+            <Text>[COLOR_FLOAT_MILITARY] Un ingeniero militar [ENDCOLOR]</Text>
         </Replace>
-        <Replace Tag="LOC_GOODYHUT_MILITARY_GRANT_MEDIC_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_MILITARY]Los aldeanos te proporcionan un Médico[ENDCOLOR]</Text>
+        <!-- <Replace Tag="LOC_GOODYHUT_MILITARY_GRANT_MEDIC_DESCRIPTION" Language="es_ES">
+            <Text>[COLOR_FLOAT_MILITARY]One Medic[ENDCOLOR]</Text>
+        </Replace> -->
+        <Replace Tag="LOC_GOODYHUT_MILITARY_GRANT_BATTERING_RAM_DESCRIPTION" Language="es_ES">
+            <Text>[COLOR_FLOAT_MILITARY] Una unidad de asistencia [ENDCOLOR]</Text>
         </Replace>
-        <Replace Tag="LOC_GOODYHUT_PRODUCTION_SMALL_CHANGE_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_MILITARY]+{1_Num} a toda la [ICON_ProductionLarge] Producción en todas las ciudades[ENDCOLOR]</Text>
-        </Replace>
-        <Replace Tag="LOC_GOODYHUT_PRODUCTION_SMALL_MODIFIER_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_MILITARY]+{1_Num}% a toda la [ICON_ProductionLarge] Producción en todas las ciudades[ENDCOLOR]</Text>
+        <Replace Tag="LOC_GOODYHUT_MILITARY_GRANT_CATAPULT_DESCRIPTION" Language="es_ES">
+            <Text>[COLOR_FLOAT_MILITARY] Una unidad de asedio [ENDCOLOR]</Text>
         </Replace>
         <!-- new goody hut reward descriptions : science-type -->
         <Replace Tag="LOC_GOODYHUT_SCIENCE_TWO_TECHS_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_SCIENCE]Dos Tecnologías gratis[ENDCOLOR]</Text>
+            <Text>[COLOR_FLOAT_SCIENCE] Dos tecnologías gratuitas [ENDCOLOR]</Text>
         </Replace>
-        <Replace Tag="LOC_GOODYHUT_SCIENCE_SMALL_CHANGE_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_SCIENCE]+{1_Num} [ICON_ScienceLarge] Ciencia en todas las ciudades[ENDCOLOR]</Text>
+        <Replace Tag="LOC_GOODYHUT_SCIENCE_TWO_TECH_BOOSTS_DESCRIPTION" Language="es_ES">
+            <Text>[COLOR_FLOAT_SCIENCE] Dos mejoras tecnológicas [ICON_TechBoosted] gratuitas [ENDCOLOR]</Text>
         </Replace>
-        <Replace Tag="LOC_GOODYHUT_SCIENCE_SMALL_MODIFIER_DESCRIPTION" Language="es_ES">
-            <Text>[COLOR_FLOAT_SCIENCE]+{1_Num}% [ICON_ScienceLarge] Ciencia en todas las ciudades[ENDCOLOR]</Text>
+        <Replace Tag="LOC_GOODYHUT_SCIENCE_ONE_TECH_BOOST_DESCRIPTION" Language="es_ES">
+            <Text>[COLOR_FLOAT_SCIENCE] Un impulso tecnológico [ICON_TechBoosted] gratuito [ENDCOLOR]</Text>
         </Replace>
         <!-- replacement goody hut reward description : survivors-type : add population -->
         <Replace Tag="LOC_GOODYHUT_SURVIVORS_ADD_POP_DESCRIPTION" Language="es_ES">
-			<Text>+{1_Num} [ICON_Citizen] población</Text>
+			<Text>+1 [ICON_Citizen] población</Text>
 		</Replace>
-        <!-- replacement goody hut reward description : survivors-type : grant civilian unit -->
-		<Replace Tag="LOC_GOODYHUT_SURVIVORS_GRANT_UNIT_DESCRIPTION" Language="es_ES">
-			<Text>Se le concede {1_Num}  {1_Num: plural 1?{2_Unit} unidad; other?{2_Unit} unidades;}</Text>
+        <!-- replacement goody hut reward descriptions : survivors-type : grant civilian unit(s) -->
+		<Replace Tag="LOC_GOODYHUT_SURVIVORS_GRANT_BUILDER_DESCRIPTION" Language="es_ES">
+			<Text>Un constructor</Text>
 		</Replace>
-        <!-- new goody hut reward descriptions : survivors-type -->
-        <Replace Tag="LOC_GOODYHUT_FOOD_SMALL_CHANGE_DESCRIPTION" Language="es_ES">
-            <Text>+{1_Num} [ICON_FoodLarge] Comida en todas las ciudades</Text>
+        <Replace Tag="LOC_GOODYHUT_SURVIVORS_GRANT_SETTLER_DESCRIPTION" Language="es_ES">
+			<Text>Un colono</Text>
+		</Replace>
+        <Replace Tag="LOC_GOODYHUT_SURVIVORS_GRANT_TRADER_DESCRIPTION" Language="es_ES">
+			<Text>Un comerciante</Text>
+		</Replace>
+        <!-- new goody hut reward descriptions : promotions-type -->
+        <Replace Tag="LOC_GOODYHUT_SMALL_EXPERIENCE_DESCRIPTION" Language="es_ES">
+            <Text>+5 experiencia de combate</Text>
         </Replace>
-        <Replace Tag="LOC_GOODYHUT_FOOD_SMALL_MODIFIER_DESCRIPTION" Language="es_ES">
-            <Text>+{1_Num}% [ICON_FoodLarge] Comida en todas las ciudades</Text>
+        <Replace Tag="LOC_GOODYHUT_MEDIUM_EXPERIENCE_DESCRIPTION" Language="es_ES">
+            <Text>+10 experiencia de combate</Text>
+        </Replace>
+        <Replace Tag="LOC_GOODYHUT_LARGE_EXPERIENCE_DESCRIPTION" Language="es_ES">
+            <Text>+15 experiencia de combate</Text>
+        </Replace>
+        <Replace Tag="LOC_GOODYHUT_HUGE_EXPERIENCE_DESCRIPTION" Language="es_ES">
+            <Text>+25 experiencia de combate</Text>
+        </Replace>
+        <!-- new goody hut reward descriptions : abilities-type -->
+        <Replace Tag="LOC_GOODYHUT_IMPROVED_SIGHT_DESCRIPTION" Language="es_ES">
+            <Text>+1 [ICON_Terrain] vista para esta unidad</Text>
+        </Replace>
+        <Replace Tag="LOC_GOODYHUT_IMPROVED_HEALING_DESCRIPTION" Language="es_ES">
+            <Text>Tasa de curación mejorada para esta unidad</Text>
+        </Replace>
+        <Replace Tag="LOC_GOODYHUT_IMPROVED_MOVEMENT_DESCRIPTION" Language="es_ES">
+            <Text>+1 [ICON_Movement] movimiento para esta unidad</Text>
+        </Replace>
+        <Replace Tag="LOC_GOODYHUT_IMPROVED_STRENGTH_DESCRIPTION" Language="es_ES">
+            <Text>+10 [ICON_Strength] de fuerza de combate para esta unidad</Text>
         </Replace>
     </LocalizedText>
 </GameData>
