--- a/EGHV/Localization/fr_FR/Ingame_XP2_Text.xml
+++ b/EGHV/Localization/fr_FR/Ingame_XP2_Text.xml
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
+<!--==========================================================================
 	EGHV : Enhanced Goodies and Hostile Villagers for Civilization VI
 	Copyright (C) 2020-2021 zzragnar0kzz
 	All rights reserved
--->
-<!-- localized in-game text for fr_FR -->
+===========================================================================-->
+<!-- localized in-game text for en_US -->
 <GameData>
 	<LocalizedText>
 		<!-- new goody hut reward descriptions : diplomacy-type -->
-		<Replace Tag="LOC_GOODYHUT_DIPLOMACY_ENVOYS_DESCRIPTION" Language="fr_FR">
-			<Text>[COLOR_FLOAT_DIPLOMATIC]+{1_Num} [ICON_Envoy] Envoyés[ENDCOLOR]</Text>
+		<Replace Tag="LOC_GOODYHUT_SMALL_FAVOR_DESCRIPTION" Language="en_US">
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+10 [ICON_FAVOR] Diplomatic Favor[ENDCOLOR]</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_DIPLOMACY_GOVERNOR_TITLES_DESCRIPTION" Language="fr_FR">
-			<Text>[COLOR_FLOAT_DIPLOMATIC]+{1_Num} [ICON_Governor] Titres du Gouverneur[ENDCOLOR]</Text>
+		<Replace Tag="LOC_GOODYHUT_MEDIUM_FAVOR_DESCRIPTION" Language="en_US">
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+20 [ICON_FAVOR] Diplomatic Favor[ENDCOLOR]</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_DIPLOMACY_SMALL_BOOST_FAVOR_DESCRIPTION" Language="fr_FR">
-			<Text>[COLOR_FLOAT_DIPLOMATIC]+{1_Num} [ICON_FAVOR] Faveur Diplomatique dans toutes les villes[ENDCOLOR]</Text>
+		<Replace Tag="LOC_GOODYHUT_LARGE_FAVOR_DESCRIPTION" Language="en_US">
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+30 [ICON_FAVOR] Diplomatic Favor[ENDCOLOR]</Text>
+		</Replace>
+		<Replace Tag="LOC_GOODYHUT_HUGE_FAVOR_DESCRIPTION" Language="en_US">
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+50 [ICON_FAVOR] Diplomatic Favor[ENDCOLOR]</Text>
+		</Replace>
+		<!-- new goody hut reward descriptions : resources-type -->
+		<Replace Tag="LOC_GOODYHUT_SMALL_RESOURCES_DESCRIPTION" Language="en_US">
+			<Text>[COLOR_FLOAT_MILITARY]+10 strategic resources[ENDCOLOR]</Text>
+		</Replace>
+		<Replace Tag="LOC_GOODYHUT_MEDIUM_RESOURCES_DESCRIPTION" Language="en_US">
+			<Text>[COLOR_FLOAT_MILITARY]+20 strategic resources[ENDCOLOR]</Text>
+		</Replace>
+		<Replace Tag="LOC_GOODYHUT_LARGE_RESOURCES_DESCRIPTION" Language="en_US">
+			<Text>[COLOR_FLOAT_MILITARY]+30 strategic resources[ENDCOLOR]</Text>
+		</Replace>
+		<Replace Tag="LOC_GOODYHUT_HUGE_RESOURCES_DESCRIPTION" Language="en_US">
+			<Text>[COLOR_FLOAT_MILITARY]+50 strategic resources[ENDCOLOR]</Text>
 		</Replace>
 	</LocalizedText>
 </GameData>
